# DirectorsConsole

./: .dockerignore  .env.docker.example  .gitignore  AGENTS.md  DOCKER.md  DirectorConsole.bat  Dockerfile  Dockerfile.orchestrator  FireRed_image_edit.json  Qwen Head Swap V4.json  README.md  cleanup-ports.ps1  codemap.md  docker-compose.cpe-only.yml  docker-compose.nas.yml  docker-compose.yml  docker-start.bat  docker-start.sh  requirements.txt  start-all.ps1  start.py
CinemaPromptEngineering/: AGENTS.md  INSTALLATION.md  PHASE2_COMPLETION_REPORT.md  QUICKSTART.md  README.md  REVIEW.md  Thumbs.db  audit_presets.py  build_installer.bat  build_installer.ps1  build_installer.sh  ddg_fallback.py  debug_scraping.py  download_frames.py  fix_missing_frames.py  install.bat  install.ps1  install.sh  manual_download.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  restart_backend.ps1  run_all_tests.sh  standalone_app.py  start.bat  start.ps1  start.sh  test_phase2_integration.py  test_providers.py  test_storyboard_api.py  verify_phase2.py
CinemaPromptEngineering/ComfyCinemaPrompting/: __init__.py  api_routes.py
CinemaPromptEngineering/Documentation/: AI_MODEL_PROMPTING.md  ANIMATION_ANALYSIS_REPORT.md  Animation Logic Diagram.md  Animation Rules.md  Animation Styles.md  Animation.md  COMPLETION_REPORT.md  Camera Movement.md  (+16 more)
Orchestrator/: .last-code-hash  API_QUICK_REFERENCE.md  ARCHITECTURE.md  Comfyui_Orchestrator.md  README.md  config.example.yaml  example_client.py  pyproject.toml  requirements.txt  setup_api.sh  verify_api_refactor.py
(+433 files in other folders)
